test: EngineDiscoveryService의 AUTH_FAILED 판정 및 로그 검증 테스트 갱신